--- a/scraper/requirements.txt
+++ b/scraper/requirements.txt
@@ -1,6 +1,23 @@
-bs4
-boto3
-pandas
-requests
-pydantic
-tls_client
+annotated-types==0.6.0
+beautifulsoup4==4.12.2
+boto3==1.29.3
+botocore==1.32.3
+bs4==0.0.1
+certifi==2023.11.17
+charset-normalizer==3.3.2
+idna==3.4
+jmespath==1.0.1
+numpy==1.26.2
+pandas==2.1.3
+pydantic==2.5.1
+pydantic_core==2.14.3
+python-dateutil==2.8.2
+pytz==2023.3.post1
+requests==2.31.0
+s3transfer==0.7.0
+six==1.16.0
+soupsieve==2.5
+tls-client==0.2.2
+typing_extensions==4.8.0
+tzdata==2023.3
+urllib3==2.0.7
