--- a/dev/docker-sync.yml
+++ b/dev/docker-sync.yml
@@ -4,9 +4,9 @@ options:
 
 syncs:
   jobhub-client-sync:
-    src: './client'
+    src: '../client'
     sync_excludes: ['.git', '.gitignore', 'node_modules']
 
   jobhub-scraper-sync:
-    src: './scraper'
+    src: '../scraper'
     sync_excludes: ['.git', '.gitignore', 'node_modules']
