--- a/.gitignore
+++ b/.gitignore
@@ -159,4 +159,10 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# removable data
 scraper/data/
+database/temp/
+
+.docker-sync
+.DS_Store
+
