--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", ".next/types/**/*.ts", "app/pages/jobs-context.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
